# mlx90640_s3

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
demo/lcd_display/: readme.txt
demo/serial_output/: readme.txt
main/: CMakeLists.txt  MLX90640_API.c  MLX90640_API.h  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.h  main.c  mlx90640_viewer.py  mlx_s3.py
main/mlx90640_lib/: MLX90640_API.c  MLX90640_API.h  MLX90640_defs.h  MLX90640_reg.h
