idf_component_register(SRCS "main.c" "MLX90640_API.c" "MLX90640_I2C_Driver.c"
                    INCLUDE_DIRS ".")
# idf_component_register(SRCS "main.c"
#                     INCLUDE_DIRS ".")

# idf_component_register(SRCS "main.cpp" "CST816T.cpp" "MLX90640_API.cpp" "MLX90640_I2C_Driver.cpp"
#                     INCLUDE_DIRS ".")
